--- a/ds1m-a/Guilherme-Rufino/index.html
+++ b/ds1m-a/Guilherme-Rufino/index.html
@@ -44,6 +44,8 @@
                 <li><a href="curiosidade">curiosidade</a></li>
             </ul>
         </nav>
+
+        <div></div>
     </header>
     <main>
         <section class="home">
