desktop completo, falta mobile

--- a/ds1m-b/lucasvinicius/index.html
+++ b/ds1m-b/lucasvinicius/index.html
@@ -16,7 +16,6 @@
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="./css/logos.css">
     <link rel="stylesheet" href="./css/menu.css">
-    <link rel="stylesheet" href="./css/seta.css">
     <link rel="stylesheet" href="./css/home.css">
     <link rel="stylesheet" href="./css/patenteImg.css">
     <link rel="stylesheet" href="./css/bo1.css">
@@ -26,9 +25,20 @@
     <link rel="stylesheet" href="./css/bo3.css">
     <link rel="stylesheet" href="./css/termos.css">
     <link rel="stylesheet" href="./css/formas.css">
+    <link rel="stylesheet" href="./css/responsividade.css">
     <title>Call of Duty: Black Ops</title>
 </head>
 <body>
+    <div vw class="enabled">
+        <div vw-access-button class="active"></div>
+        <div vw-plugin-wrapper>
+          <div class="vw-plugin-top-wrapper"></div>
+        </div>
+    </div>
+      <script src="https://vlibras.gov.br/app/vlibras-plugin.js"></script>
+      <script>
+        new window.VLibras.Widget('https://vlibras.gov.br/app')
+      </script>
     <header>
         <nav>
             <ul class="dropdown-menu">
@@ -71,24 +81,24 @@
         </section>
         <section class="bo1" id="bo1">
                 <div class="textImg">
-                    <div class="imagensBo1EBo2">
+                    <div class="imagensBo1EBo3">
                         <a href="https://www.callofduty.com/blackops" target="_blank">
                             <img src="./img/cod-bo-logo 1.png" alt="logoBo1" class="logo_bo1">
                         </a>
                         <img src="./img/2011-05-20-codlackops-5 1.png" alt="imgbo1" class="img_bo1">
-                    </div>
-                    <div id="linha-horizontal2"></div>    
-                    <div class="quadrado1"> 
-                        <span>
-                            Call of Duty: Black Ops
-                            1960, durante o auge da Guerra Fria, SAD e SOG são duas divisões da CIA que actuam atrás das linhas inimigas. 
-                            A história gira à volta de uma arma química experimental alemã roubada pelos soviéticos no fim da 2ª Guerra Mundial. 
-                            É aqui que conhecemos pela primeira vez o agente 
-                            lex Mason, aquando duma missão de assassinato de Fidel Castro, em Cuba. 
-                            É o primeiro jogo a incluir o modo de zombies.
-                        </span>
                         <div class="quadrado">SAIBA MAIS</div>
                     </div>
+                    <div id="linha-horizontal2"></div>    
+                        <a href="https://www.fnac.pt/Call-of-Duty-A-historia-ate-agora/cp54/w-4" target="_blank">
+                            <span>
+                                Call of Duty: Black Ops
+                                1960, durante o auge da Guerra Fria, SAD e SOG são duas divisões da CIA que actuam atrás das linhas inimigas. 
+                                A história gira à volta de uma arma química experimental alemã roubada pelos soviéticos no fim da 2ª Guerra Mundial. 
+                                É aqui que conhecemos pela primeira vez o agente 
+                                lex Mason, aquando duma missão de assassinato de Fidel Castro, em Cuba. 
+                                É o primeiro jogo a incluir o modo de zombies.
+                            </span>
+                        </a>
                 </div>
         </section>
         <section class="bo2" id="bo2">
@@ -98,43 +108,44 @@
                         <img src="./img/cod-bo2-logo 1.png" alt="logoBo2" class="logo_bo2">
                     </a>
                     <div class="imgBo2">
-                        <div class="textQuadrado">
-                            <span>
-                                Call of Duty: Black Ops 2 é um jogo, para PS3, Xbox 360, PC e Wii U que marcou o retorno da maior franquia de tiro. O jogo apresenta uma grande novidade em relação aos títulos anteriores: um tom futurista para sua jogabilidade e 
-                                história.
-                                O jogador deve travar um combater entre humanos e robôs. 
-                                 Um dos grandes destaques do game é o seu modo online, que permite batalha épicas contra outros jogadores. 
-                                pesar de trazer elementos futuristas, a série não abandona suas raízes e oferece uma narrativa com uma história 
-                                paralela que se passa nos anos 1970-80, em meio à Guerra Fria.
-                            </span>
-                            <div class="quadrado2">SAIBA MAIS</div>
-                        </div>
+                            <a href="https://www.techtudo.com.br/tudo-sobre/call-duty-black-ops-2/" target="_blank">
+                                <span>
+                                    Call of Duty: Black Ops 2 é um jogo, para PS3, Xbox 360, PC e Wii U que marcou o retorno da maior franquia de tiro. O jogo apresenta uma grande novidade em relação aos títulos anteriores: um tom futurista para sua jogabilidade e 
+                                    história.
+                                    O jogador deve travar um combater entre humanos e robôs. 
+                                    Um dos grandes destaques do game é o seu modo online, que permite batalha épicas contra outros jogadores. 
+                                    pesar de trazer elementos futuristas, a série não abandona suas raízes e oferece uma narrativa com uma história 
+                                    paralela que se passa nos anos 1970-80, em meio à Guerra Fria.
+                                </span>
+                            </a>
+                        
                         <div id="linha-horizontal222"></div>
-                        <img src="./img/bo2_Img 1.png" alt="imgebo2">                        
+                        <img src="./img/bo2_Img 1.png" alt="imgebo2">                           
                     </div>
                 </div>
+                <div id="quadrado2">SAIBA MAIS</div>
             </div>
         </section>
         <section class="bo3" id="bo3">
             <div class="textImg">
-                <div class="imagensBo1EBo2">
+                <div class="imagensBo1EBo3">
                     <a href="https://www.callofduty.com/blackops3" target="_blank">
                         <img src="./img/codbo3-logo 1.png" alt="logoBo3" class="logo_bo3">
                     </a>
                     <img src="./img/DLC3_KremlinNew 1.png" alt="imgbo1" class="img_bo3">
-                </div>
-                <div id="linha-horizontal22"></div>    
-                <div class="quadrado1"> 
-                    <span>
-                        Call Of Duty: Black Ops 3 foi
-                        desenvolvido pela Treyarch. Lançado para Xbox One, PS4, Xbox 360, PlayStation 3 e PC
-                        , o jogo dá continuidade à longa tradição da franquia em multiplayer online, e também revitaliza o modo campanha com algumas novidades. 
-                        Ambientado em 2065, o enredo destaca os eventos e combates do esquadrão Black Ops, e aposta nas tradicionais passagens cinematográficas 
-                        que fizeram a fama da 
-                        franquia desde as primeiras versões.
-                    </span>
                     <div class="quadrado">SAIBA MAIS</div>
                 </div>
+                <div id="linha-horizontal22"></div>    
+                    <a href="https://www.techtudo.com.br/review/call-duty-black-ops-3.ghtml" target="_blank">
+                        <span>
+                            Call Of Duty: Black Ops 3 foi
+                            desenvolvido pela Treyarch. Lançado para Xbox One, PS4, Xbox 360, PlayStation 3 e PC
+                            , o jogo dá continuidade à longa tradição da franquia em multiplayer online, e também revitaliza o modo campanha com algumas novidades. 
+                            Ambientado em 2065, o enredo destaca os eventos e combates do esquadrão Black Ops, e aposta nas tradicionais passagens cinematográficas 
+                            que fizeram a fama da 
+                            franquia desde as primeiras versões.
+                        </span>
+                    </a>
             </div>
         </section>
     </main>
