--- a/ds1t-a/marceloGabriel-riotGames/index.html
+++ b/ds1t-a/marceloGabriel-riotGames/index.html
@@ -443,6 +443,17 @@
 
     <script src = "myscript.js"></script>
 
+    <div vw class="enabled">
+        <div vw-access-button class="active"></div>
+        <div vw-plugin-wrapper>
+          <div class="vw-plugin-top-wrapper"></div>
+        </div>
+      </div>
+      <script src="https://vlibras.gov.br/app/vlibras-plugin.js"></script>
+      <script>
+        new window.VLibras.Widget('https://vlibras.gov.br/app');
+      </script>
+
 </body>
 
 
