--- a/ds1t-a/marceloGabriel-riotGames/index.html
+++ b/ds1t-a/marceloGabriel-riotGames/index.html
@@ -360,7 +360,7 @@
 
            
 
-            <img class = "fundo-e-sports" src = "./img/Fundo jogos.png" alt = "">
+            <img class = "fundo-e-sports" src = "./img/Fundo-Jogos 1.svg" alt = "">
 
         </section>
 
@@ -385,7 +385,7 @@
                 </h2>
 
                 <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus non justo quis massa euismod finibus. Pellentesque laoreet nulla odio, in imperdiet leo ultricies a. Integer eget placerat dui. Mauris sed tortor fringilla, posuere augue eget, dapibus eros. Ut convallis pretium erat, ac tempus neque dictum id. Proin rutrum bibendum elit non varius. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Aenean at ligula ut felis tristique egestas a nec dolor.
+                    Nossa aspiração é ser, a nível global, a empresa de jogos mais focada nos jogadores. A Riot Games foi fundada em 2006 com o objetivo de desenvolver, distribuir e apoiar os maiores e melhores jogos com foco nos jogadores do mundo. Em 2009, nós lançamos o League of Legends, nosso título de estreia, aclamado no mundo todo. O LoL cresceu até se tornar o título de PC mais jogado do mundo, transformando-se em um dos principais fatores do crescimento explosivo do cenário de Esports. À medida que o LoL entra em sua segunda década, continuamos aprimorando o jogo enquanto oferecemos novas experiências aos jogadores com Teamfight Tactics, Legends of Runeterra, VALORANT, League of Legends: Wild Rift e vários outros títulos em desenvolvimento.
                 </p>
 
             </div>
