--- a/ds1t-a/marceloGabriel-riotGames/index.html
+++ b/ds1t-a/marceloGabriel-riotGames/index.html
@@ -46,9 +46,9 @@
                     <ul>
                         <li><a href="#home">Home</a></li>
                         <li><a href="#jogos">Jogos</a></li>
-                        <li><a href="e-sports">E-Sports</a></li>
-                        <li><a href="sobre-nos">Sobre Nós</a></li>
-                        <li><a href="footer-contato">Contato</a></li>
+                        <li><a href="#e-sports">E-Sports</a></li>
+                        <li><a href="#sobre-nos">Sobre Nós</a></li>
+                        <li><a href="#footer-contato">Contato</a></li>
                     </ul>
                 </nav>
 
