--- a/ds1t-a/lohannes/index.html
+++ b/ds1t-a/lohannes/index.html
@@ -15,6 +15,7 @@
     <link rel="stylesheet" href="./css/mapa.css">
     <link rel="stylesheet" href="./css/atlok.css">
     <link rel="stylesheet" href="./css/icones-atlok.css">
+    <link rel="stylesheet" href="./css/elementos.css">
     <title>Avatar - A Lenda</title>
     <link
         href="https://fonts.googleapis.com/css2?family=Marcellus+SC&family=Permanent+Marker&family=Sarala:wght@400;700&display=swap"
@@ -284,30 +285,29 @@
                             <img src="./images/bolin.png" alt="" class="bolin_photo">
                         </div>
                     </a>
-                    <a href="#a" type="" class="zukoIcone">
-                        <div class="zuko">
-                            <div class="zukoInfo2">
+                    <a href="#a" type="" class="makoIcone">
+                        <div class="mako">
+                            <div class="makoInfo2">
                                 <div class="elemento">
                                     <div class="avatarElemento">
                                         <img src="./images/elementoFogo.png" alt="">
                                     </div>
                                     <p class="elementoNome">fogo</p>
                                 </div>
-                                <img src="./images/agnikai.gif" alt="" class="gif">
+                                <img src="./images/profissional.gif" alt="" class="gif">
                             </div>
-                            <div class="zukoInfo">
-                                <h1 id="title" class="nomeZuko">Zuko</h1>
-                                <p id="desc" class="descZuko">Zuko foi expulso de sua casa após desonrar seu pai, sendo
-                                    desafiado pelo próprio em um “Agni kai” - um duelo entre dobradores de fogo - pelo
-                                    próprio como castigo e tendo seu rosto queimado.
+                            <div class="makoInfo">
+                                <h1 id="title" class="nomeMako">Mako</h1>
+                                <p id="desc" class="descMako">Mako é o irmão de Bolin, um habilidoso dominador de fogo e
+                                    profissional em dominação, sendo o melhor jogador do esporte conhecido na cidade.
 
-                                    Se obcecou pela ideia de capturar o Avatar para entregá-lo à Nação do Fogo e
-                                    recuperar sua honra com o Senhor do Fogo Ozai, seu pai.
+                                    Após descobrir que Korra era o Avatar, ajudou ela a lidar com o problema do vilão
+                                    Amon, mesmo não se interessando tanto em participar do grupo de começo.
 
-                                    Acabou se aliando a Aang com o decorrer do desenho ao refletir sobre seu objetivo.
+                                    Cuida de seu irmão a série inteira e vai se tornando mais amigável com o tempo.
                                 </p>
                             </div>
-                            <img src="./images/zuko.png" alt="" class="zuko_photo">
+                            <img src="./images/mako.png" alt="" class="mako_photo">
                         </div>
                     </a>
                 </div>
@@ -438,9 +438,57 @@
                 </div>
             </div>
         </section>
-        <section id="elementos"></section>
+        <section id="elementos">
+            <div class="div-slider">
+                <ul class="slides-front">
+                  <input type="radio" name="radio-btn" id="img-1" checked="">
+                  <li class="slide-container">
+                  <div class="slide">
+                    <img src="./images/DobraAgua.png">
+                      </div>
+                  <div class="nav">
+                    <label for="img-2" class="next">›</label>
+                  </div>
+                  </li>
+              
+                  <input type="radio" name="radio-btn" id="img-2">
+                  <li class="slide-container">
+                      <div class="slide">
+                        <img src="./images/DobraTerra.png">
+                      </div>
+                  <div class="nav">
+                    <label for="img-1" class="prev">‹</label>
+                    <label for="img-3" class="next">›</label>
+                  </div>
+                  </li>
+              
+                  <input type="radio" name="radio-btn" id="img-3">
+                  <li class="slide-container">
+                      <div class="slide">
+                        <img src="./images/DobraFogo.png">
+                      </div>
+                  <div class="nav">
+                    <label for="img-2" class="prev">‹</label>
+                    <label for="img-4" class="next">›</label>
+                  </div>
+                  </li>
+
+                  <input type="radio" name="radio-btn" id="img-4">
+                  <li class="slide-container">
+                      <div class="slide">
+                        <img src="./images/DobraAr.png">
+                      </div>
+                  <div class="nav">
+                    <label for="img-3" class="prev">‹</label>
+                  </div>
+                  </li>
+                </ul>
+              </div>
+        </section>
     </main>
-    <footer></footer>
+    <footer>
+        Todos os direitos reservados | 2022 | Desenvolvido por Lohannes da Silva Costa
+    </footer>
 </body>
 
 </html>
