--- a/ds1t-b/yasmin/index.html
+++ b/ds1t-b/yasmin/index.html
@@ -35,7 +35,7 @@
         <i class="fas fa-angle-double-up"></i>
     </a>
     <header>
-        <img src="./img/logotrvls.png" alt="">
+        <img src="./img/logotrvls.png" alt="TRVLS" class="logo">
         <nav>
             <ul class="menu">
                 <li>
@@ -86,8 +86,9 @@
                     <p>Arraial do Cabo, RJ</p>
                 </div>
                 <div class="lencois">
-                    <p>Lençóis Maranhenses, MA</p>
-                    <img src="./img/lencois.png" alt="Lençóis Maranhenses">                  
+                    <p class="desk">Lençóis Maranhenses, MA</p>
+                    <img src="./img/lencois.png" alt="Lençóis Maranhenses">   
+                    <p class="mob">Lençóis Maranhenses, MA</p>               
                 </div>
                 <div class="cataratas">
                     <img src="./img/cataratas.png" alt="Cataratas do Iguaçu">
@@ -147,7 +148,7 @@
     </section>
     </main>
     <footer>
-        <p>@2022 Yasmin Gonçalves. Todos os direitos reservados </p>
+        <p> Yasmin Gonçalves @2022 | Todos os direitos reservados </p>
     </footer>
 </body>
 </html>
