imagem da sessão arrumada

--- a/ds1t-b/thiagoFreitas/index.html
+++ b/ds1t-b/thiagoFreitas/index.html
@@ -32,7 +32,7 @@
     <link rel="stylesheet" href="./css/home.css">
     <link rel="stylesheet" href="./css/quem-somos.css">
     <link rel="stylesheet" href="./css/cardapio.css">
-    <link rel="stylesheet" href="./css//unidades.css">
+    <link rel="stylesheet" href="./css/unidades.css">
     <link rel="stylesheet" href="./css/section-title.css">
     <link rel="stylesheet" href="./css/contato.css">
     <link rel="stylesheet" href="./css/bars.css">
