--- a/ds1t-b/JãoVictor/index.html
+++ b/ds1t-b/JãoVictor/index.html
@@ -147,9 +147,9 @@
         <section class="sobre" id="sobre">
 
             <div class="container-slide">
-                <div class="action-button" id="previous">&laquo</div>
-                <div class="container-items" id="container-items"></div>
-                <div class="action-button" id="next">&raquo</div>
+                <div class="action-button" id="previous" aria-label="Botão">&laquo</div>
+                <div class="container-items" id="container-items" aria-label="Itens"></div>
+                <div class="action-button" id="next" aria-label="funcionamento">&raquo</div>
             </div>
             <script src="./javascript.js"></script>
 
