--- a/ds1t-a/Cauã Felipe/index.html
+++ b/ds1t-a/Cauã Felipe/index.html
@@ -19,6 +19,16 @@
     <title>Naruto</title>
 </head>
 <body>
+    <div vw class="enabled">
+        <div vw-access-button class="active"></div>
+        <div vw-plugin-wrapper>
+          <div class="vw-plugin-top-wrapper"></div>
+        </div>
+      </div>
+      <script src="https://vlibras.gov.br/app/vlibras-plugin.js"></script>
+      <script>
+        new window.VLibras.Widget('https://vlibras.gov.br/app');
+      </script>
     <main>
        <section class="home" id="home">
         
