Section personagens responsivo incompleta

--- a/ds1t-b/Projeto FF/index.html
+++ b/ds1t-b/Projeto FF/index.html
@@ -25,6 +25,7 @@
     <link rel="stylesheet" href="criadores.css">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="README.md">
+    <link rel="stylesheet" href="slide.js">
     <title>Final Fantasy VII</title>
 </head>
 
@@ -101,15 +102,56 @@
             <div class="titulo-personagens">
                 <p class="titulo">Personagens</p>
             </div>
+            <a class="botao-esquerdo" href="#contatos">
+                <img src="./img/Seta-esquerda.png" alt="">
+            </a>
                 <div class="blocos-personagens">
-                   <div class="icones-personagens">
-                       <img class="icone" src="./img/Aerith.png" alt="">
-                       <img class="icone" src="./img/Tifa.png" alt="">
-                       <img class="icone" src="./img/Cloud (1).png" alt="">
-                       <img class="icone" src="./img/Barret (1).png" alt="">
-                       <img class="icone" src="./img/Sephiroth.png" alt="">
+                   <div class="icones-personagens" id="icones">
+                       <div class="icone">
+                           <div class="texto-personagem">
+                               <p>Aerith Gainsborought</p>
+                           </div>
+                           <div class="imagem-personagem">
+                            <img src="./img/Aerith.png" alt="" url="Aerith">
+                           </div>
+                       </div>
+                       <div class="icone">
+                        <div class="texto-personagem-dois">
+                            <p>Tifa Lockhart</p>
+                        </div>
+                        <div class="imagem-personagem">
+                         <img src="./img/Tifa.png" alt="">
+                        </div>
+                    </div>
+                    <div class="icone">
+                        <div class="texto-personagem-tres">
+                            <p>Cloud Strife</p>
+                        </div>
+                        <div class="imagem-personagem">
+                         <img src="./img/Cloud.png" alt="">
+                        </div>
+                    </div>
+                    <div class="icone">
+                        <div class="texto-personagem-quatro">
+                            <p>Barret Wallace</p>
+                        </div>
+                        <div class="imagem-personagem">
+                         <img src="./img/Barret.png" alt="">
+                        </div>
+                    </div>
+                    <div class="icone">
+                        <div class="texto-personagem-cinco">
+                            <p>Sephiroth</p>
+                        </div>
+                        <div class="imagem-personagem">
+                         <img src="./img/Sephiroth.png" alt="">
+                        </div>
+                    </div>
                    </div>
             </div>
+            <a class="botao-direito" href="#Aerith">
+                <img src="./img/Seta-direita.png" alt="">
+            </a>
         </section>
         <section class="producao" id="producao">
             <div class="titulo-producao">
