--- a/ds1t-a/one-page-doceria/index.html
+++ b/ds1t-a/one-page-doceria/index.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
 <html lang="PT-BR">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://kit.fontawesome.com/d4d24cbd89.js" crossorigin="anonymous"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400;700&family=Inter:wght@600&family=Rubik+Bubbles&display=swap" rel="stylesheet">
@@ -13,10 +15,25 @@
     <link rel="stylesheet" href="css/menu.css">
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/home.css">
-    <link rel="stylesheet" href="css/menu-cardapio.css">
+    <link rel="stylesheet" href="css/menu_cardapio.css">
+    <link rel="stylesheet" href="css/about_us.css">
+    <link rel="stylesheet" href="css/contato.css">
+
     <title>Gulart's</title>
 </head>
+
 <body>
+    <div class="bg"></div>
+    <div vw class="enabled">
+        <div vw-access-button class="active"></div>
+        <div vw-plugin-wrapper>
+            <div class="vw-plugin-top-wrapper"></div>
+        </div>
+    </div>
+    <script src="https://vlibras.gov.br/app/vlibras-plugin.js"></script>
+    <script>
+        new window.VLibras.Widget('https://vlibras.gov.br/app');
+    </script>
     <header>
         <div class="logo_doceria">
             <img class="logo" src="img/Logo.png" alt="">
@@ -27,7 +44,7 @@
                     <a href="#home">Home</a>
                 </li>
                 <li>
-                    <a href="#menu-cardapio">Menu</a>
+                    <a href="#menu_cardapio">Menu</a>
                 </li>
                 <li>
                     <a href="#about">About us</a>
@@ -37,7 +54,7 @@
                 </li>
             </ul>
 
-        </nav>  
+        </nav>
     </header>
     <main>
         <section class="home" id="home">
@@ -49,106 +66,145 @@
             <h1 class="titulo">
                 NataLandia
             </h1>
-        <div class="cardapio_box">
-            
-            <div class="item_cardapio_frango">
-                <div class="img_itens">
-                    <img src="img/image 14.png" alt="">
-                </div>
-                <p class="titulo_itens">
-                    Frango Assado</p>
-                <div class="preco_add">
-                <p class="preco">
-                    Preço <span class="valor">R$60,00</span></p>
-                <a href="#" class="add">
-                    Add +</a>
-                </div>
-            </div>
+            <div class="circulo"></div>
+            <div class="cardapio_box">
 
-            <div class="rabanadao">
-                <div class="item_cardapio_rabanada">
+                <div class="item_cardapio_frango">
                     <div class="img_itens">
-                        <img src="img/image 13.png" alt="">
+                        <img src="img/image 14.png" alt="">
                     </div>
                     <p class="titulo_itens">
-                        Rabanada</p>
+                        Frango Assado</p>
                     <div class="preco_add">
-                    <p class="preco">
-                        Preço <span class="valor">R$5,00</span></p>
-                    <a href="#" class="add">
-                    Add +</a>
-                </div>
-                </div>
-            </div>
-
-            <div class="pave">
-                <div class="item_cardapio_pave">
-                    <div class="img_itens">
-                        <img src="img/image 15.png" alt="">
+                        <p class="preco">
+                            Preço <span class="valor">R$60,00</span></p>
+                        <a href="#" class="add">
+                            Add +</a>
                     </div>
-                    <p class="titulo_itens">
-                        Pave de Chocolate</p>
-                    <div class="preco_add">
-                    <p class="preco">
-                        Preço <span class="valor">R$80,00</span></p>
-                    <a href="#" class="add">
-                    Add +</a>
                 </div>
-                </div>
-            </div>
 
-            <div class="salpicao">
-                <div class="item_cardapio_salpicao">
-                    <div class="img_itens">
-                        <img src="img/image 19.png" alt="">
+                <div class="rabanadao">
+                    <div class="item_cardapio_rabanada">
+                        <div class="img_itens">
+                            <img src="img/image 13.png" alt="">
+                        </div>
+                        <p class="titulo_itens">
+                            Rabanada</p>
+                        <div class="preco_add">
+                            <p class="preco">
+                                Preço <span class="valor">R$5,00</span></p>
+                            <a href="#" class="add">
+                                Add +</a>
+                        </div>
                     </div>
-                    <p class="titulo_itens">
-                        Salpicão</p>
-                    <div class="preco_add">
-                    <p class="preco">
-                        Preço <span class="valor">R$34,98</span></p>
-                    <a href="#" class="add">
-                    Add +</a>
                 </div>
-                </div>
-            </div>
 
-            <div class="arroz">
-                <div class="item_cardapio_arroz">
-                    <div class="img_itens">
-                        <img src="img/th.jfif" alt="">
+                <div class="pave">
+                    <div class="item_cardapio_pave">
+                        <div class="img_itens">
+                            <img src="img/image 15.png" alt="">
+                        </div>
+                        <p class="titulo_itens">
+                            Pave de Chocolate</p>
+                        <div class="preco_add">
+                            <p class="preco">
+                                Preço <span class="valor">R$80,00</span></p>
+                            <a href="#" class="add">
+                                Add +</a>
+                        </div>
                     </div>
-                    <p class="titulo_itens">
-                        Arroz</p>
-                    <div class="preco_add">
-                    <p class="preco">
-                        Preço <span class="valor">R$12,99</span></p>
-                    <a href="#" class="add">
-                    Add +</a>
                 </div>
-                </div>
-            </div>
 
-            <div class="maionese">
-                <div class="item_cardapio_maionese">
-                    <div class="img_itens">
-                        <img src="img/Capturar 1.png" alt="">
+                <div class="salpicao">
+                    <div class="item_cardapio_salpicao">
+                        <div class="img_itens">
+                            <img src="img/image 19.png" alt="">
+                        </div>
+                        <p class="titulo_itens">
+                            Salpicão</p>
+                        <div class="preco_add">
+                            <p class="preco">
+                                Preço <span class="valor">R$34,98</span></p>
+                            <a href="#" class="add">
+                                Add +</a>
+                        </div>
                     </div>
-                    <p class="titulo_itens">
-                        Maionese</p>
-                    <div class="preco_add">
-                    <p class="preco">
-                        Preço <span class="valor">R$12,50</span></p>
-                    <a href="#" class="add">
-                    Add +</a>
                 </div>
+
+                <div class="arroz">
+                    <div class="item_cardapio_arroz">
+                        <div class="img_itens">
+                            <img src="img/th.jfif" alt="">
+                        </div>
+                        <p class="titulo_itens">
+                            Arroz</p>
+                        <div class="preco_add">
+                            <p class="preco">
+                                Preço <span class="valor">R$12,99</span></p>
+                            <a href="#" class="add">
+                                Add +</a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="maionese">
+                    <div class="item_cardapio_maionese">
+                        <div class="img_itens">
+                            <img src="img/Capturar 1.png" alt="">
+                        </div>
+                        <p class="titulo_itens">
+                            Maionese</p>
+                        <div class="preco_add">
+                            <p class="preco">
+                                Preço <span class="valor">R$12,50</span></p>
+                            <a href="#" class="add">
+                                Add +</a>
+                        </div>
+                    </div>
                 </div>
             </div>
-        </div>
         </section>
-        <section class="about-us" id="about"></section>
-        <section class="contato" id="contato"></section>
+        <section class="about-us" id="about">
+            <h1 class="titulo">
+                Gulart’s
+            </h1>
+            <h2 class="subtitulo">A Gulart’s foi feita por uma família carioca, começaram a comemorar o Natal da melhor
+                maneira, fazendo essa data ser especial e doce!</h2>
+            <img class="img_loja" src="./img/image 18.png" alt="">
+        </section>
+        <section class="contato" id="contato">
+            <h1 class="titulo">
+                Contato
+            </h1>
+            <img src="./img/image 16.png" alt="" class="maps">
+            <div class="localizacao">
+                <i class="fa-sharp fa-solid fa-location-dot"></i>
+                <h1 class="cidade">RJ - Angra dos Reis</h1>
+            </div>
+            <div class="ig_img">
+                <div class="social">
+                    <div class="whatsapp">
+                        <img src="./img/image 17.png" alt="" class="whats">
+                        <p class="numero">(24)99687-5423</p>
+                    </div>
+                    <div class="instagram">
+                        <img src="./img/instagram (1) 1.png" alt="" class="insta">
+                        <p class="ig">@gulart</p>
+                    </div>
+                    <div class="facebook">
+                        <img src="./img/facebook 2.png" alt="" class="face">
+                        <p class="nome">Gulart’s Natal</p>
+                    </div>
+                </div>
+                <div class="doce">
+                    <img class="doce" src="./img/docinho.png" alt="">
+                </div>
+            </div>
+
+        </section>
+
     </main>
-    <footer></footer>
+    <footer>Copyright © 2022</footer>
 </body>
-</html> 
+
+</html>
