--- a/ds1m-b/MiguelJoaquim/index.html
+++ b/ds1m-b/MiguelJoaquim/index.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="./pag5.css">
     <link rel="stylesheet" href="./pag6.css">
     <link rel="stylesheet" href="./pag7.css">
+    <script src="https://kit.fontawesome.com/0efc108669.js" crossorigin="anonymous"></script>
     <title>Avatar</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -20,47 +21,73 @@
 
 <body>
     <header><img class="logo" src="./img/Logo.png" alt="Avatar">
+        <div class="menu">
+            <a href="#personagens" class="personagem-menu">
+                <h1>Personagens</h1>
+            </a>
+            <a href="#historia" class="personagem-menu">
+                <h1>Historia</h1>
+            </a>
+        </div>
+        <div class="menu">
+            <a href="https://www.netflix.com/br/title/70142405" target="_blank" class="personagem-menu">
+                <h1>Animação</h1>
+            </a>
+        </div>
+
 
     </header>
     <main>
-        <div class="pag1">
+        <a href="#" class="voltar">
+            <i class="fas fa-chevron-circle-up"></i>
+        </a>
+        <div class="pag1" id="personagens">
             <div class="voltar">
-                <input type=”button” value=””>
                 <!-- <h1>Home</h1> -->
             </div>
             <div class="titulo-personagens">
-                <h1 class="titulo">personagen</h1>
+                <h1 class="titulo">Personagens</h1>
             </div>
             <div class="personagens-align">
                 <div class="personagens_principal">
                     <img src="./img/Sokka.png" alt="">
-                    <img src="./img/Sokka imagen.png" alt="Sokka" class="sokka">
+                    <a href="#sokka">
+                        <img src="./img/Sokka imagen.png" alt="Sokka" class="sokka">
+                    </a>
                 </div>
 
                 <div class="personagens_principal">
                     <img src="./img/katara.png" alt="">
-                    <img src="./img/Katara imagen.png" alt="Sokka" class="katara">
+                    <a href="#katara">
+                        <img src="./img/Katara imagen.png" alt="Sokka" class="katara">
+                    </a>
                 </div>
 
                 <div class="personagens_principal">
 
                     <img src="./img/Aang.png" alt="">
-                    <img src="./img/Aang imagen.png" alt="Sokka" class="aang">
+                    <a href="#aang">
+                        <img src="./img/Aang imagen.png" alt="Sokka" class="aang">
+                    </a>
                 </div>
 
                 <div class="personagens_principal">
                     <img src="./img/Toph.png" alt="">
-                    <img src="./img/toph imagen.png" alt="Sokka" class="toph">
+                    <a href="#toph">
+                        <img src="./img/toph imagen.png" alt="Sokka" class="toph">
+                    </a>
                 </div>
 
                 <div class="personagens_principal">
                     <img src="img/Zuko.png" alt="">
-                    <img src="./img/zuko imagen.webp" alt="Sokka" class="zuko">
+                    <a href="#zuko">
+                        <img src="./img/zuko imagen.webp" alt="Sokka" class="zuko">
+                    </a>
                 </div>
             </div>
         </div>
 
-        <div class="pag2">
+        <div class="pag2" id="historia">
             <div class="historia">
                 <h1 class="titulo2">Historia</h1>
             </div>
@@ -78,7 +105,7 @@
 
         </div>
 
-        <div class="pag3">
+        <div class="pag3" id="zuko">
 
             <div class="letras">
                 <img src="./img/ZukoLetras.png" alt="" class="ZukoLetras">
@@ -97,7 +124,7 @@
 
         </div>
 
-        <div class="pag4">
+        <div class="pag4" id="katara">
 
             <div class="letras2">
 
@@ -115,7 +142,7 @@
             <img src="./img/kataraAgua.png" alt="">
 
         </div>
-        <div class="pag5">
+        <div class="pag5" id="toph">
 
             <div class="letras3">
                 <img src="./img/TophLetras.png" alt="">
@@ -133,7 +160,7 @@
             </div>
         </div>
 
-        <div class="pag6">
+        <div class="pag6" id="aang">
             <div class="Letras4">
                 <img src="./img/AangLetras.png" alt="">
                 <div class="AangHistoria">
@@ -150,20 +177,9 @@
         </div>
     </main>
 
-
-
-
     <footer>
 
-
-
-
-
-
-
-
-
-        <div class="pag7">
+        <div class="pag7" id="sokka">
             <div class="Letras5">
                 <img src="./img/SokkaLetras.png" alt="">
                 <div class="SokkaHistoria">
@@ -181,19 +197,6 @@
 
             </div>
         </div>
-
-
-
-
-
-
-
-
-
-
-
-
-
 
     </footer>
 
