--- a/ds1m-b/lucasvinicius/index.html
+++ b/ds1m-b/lucasvinicius/index.html
@@ -39,6 +39,9 @@
       <script>
         new window.VLibras.Widget('https://vlibras.gov.br/app')
       </script>
+        <a href="#" onclick="go()" class="voltar">
+            <i class="fas fa-chevron-circle-up"></i>
+        </a>
     <header>
         <nav>
             <ul class="dropdown-menu">
@@ -61,13 +64,12 @@
             </ul>
         </nav>
         <div>
-            <img src="./img/Vector.png" alt="logoCallOfDuty" class="logoPrimeira">
+            <a href="https://www.callofduty.com/br/pt/" target="_blank">
+                <img src="./img/Vector.png" alt="logoCallOfDuty" class="logoPrimeira">
+            </a>
         </div>
     </header>
     <main>
-        <a href="#" class="voltar">
-            <i class="fas fa-chevron-circle-up"></i>
-        </a>
         <section class="home" id="home">
             <h1 class="patente">
                 &#187; 
@@ -85,8 +87,12 @@
                         <a href="https://www.callofduty.com/blackops" target="_blank">
                             <img src="./img/cod-bo-logo 1.png" alt="logoBo1" class="logo_bo1">
                         </a>
-                        <img src="./img/2011-05-20-codlackops-5 1.png" alt="imgbo1" class="img_bo1">
-                        <div class="quadrado">SAIBA MAIS</div>
+                        <div>
+                            <img src="./img/2011-05-20-codlackops-5 1.png" alt="imgbo1" class="img_bo1">
+                            <a href="https://www.callofduty.com/blackops" target="_blank">
+                                <div id="quadrado">SAIBA MAIS</div>
+                            </a>
+                        </div>
                     </div>
                     <div id="linha-horizontal2"></div>    
                         <a href="https://www.fnac.pt/Call-of-Duty-A-historia-ate-agora/cp54/w-4" target="_blank">
@@ -120,10 +126,12 @@
                             </a>
                         
                         <div id="linha-horizontal222"></div>
-                        <img src="./img/bo2_Img 1.png" alt="imgebo2">                           
+                        <img src="./img/bo2_Img 1.png" alt="imgebo2" class="imgebo2">                           
                     </div>
                 </div>
-                <div id="quadrado2">SAIBA MAIS</div>
+                <a href="https://www.techtudo.com.br/tudo-sobre/call-duty-black-ops-2/" target="_blank">
+                    <div id="quadrado2">SAIBA MAIS</div>
+                </a>
             </div>
         </section>
         <section class="bo3" id="bo3">
@@ -132,8 +140,12 @@
                     <a href="https://www.callofduty.com/blackops3" target="_blank">
                         <img src="./img/codbo3-logo 1.png" alt="logoBo3" class="logo_bo3">
                     </a>
-                    <img src="./img/DLC3_KremlinNew 1.png" alt="imgbo1" class="img_bo3">
-                    <div class="quadrado">SAIBA MAIS</div>
+                    <div>
+                        <img src="./img/DLC3_KremlinNew 1.png" alt="imgbo1" class="img_bo3">
+                        <a href="https://www.callofduty.com/blackops3" target="_blank">
+                            <div id="quadrado">SAIBA MAIS</div>
+                        </a>
+                    </div>
                 </div>
                 <div id="linha-horizontal22"></div>    
                     <a href="https://www.techtudo.com.br/review/call-duty-black-ops-3.ghtml" target="_blank">
